47. 全排列 II 优化